fix footer button alignment

--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -694,12 +694,16 @@ form textarea.tyr-markup-editor {
 
   &.tyr-table-editing-row,
   &.tyr-table-adding-row {
-    .anticon-filter,
+    .anticon-filter {
+      display: none;
+    }
+
     .ant-pagination {
       display: none;
     }
 
     //.ant-table-column-sorter
+    .ant-pagination,
     .ant-table-column-has-filters .ant-dropdown-trigger {
       visibility: hidden;
     }
